# TechDocAnalyzer

./: Dockerfile  README.md  bot.py  pyproject.toml
handlers/: docx.py  groq.py
